--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -44,7 +44,7 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: JCG 836PRO-5.0
+        TNAME: JCG 836PRO
         KERNEL: 3.4
       run: |
         cd /opt/rt-n56u/trunk
